projects/CodeSaver/style.css
body {
  background-color: var(--a-clr);
  overflow-x: hidden !important;
}

.add-code {
  height: 300px;
  width: clamp(20rem, 45%, 90vw);
  max-width: 90vw;
  border-radius: .5rem;
  background-color: white;
  position: absolute;
  top: 15%;
  left: 50%;
  transform: translate(-50%);
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  gap: 15px;
  cursor: pointer;
}

.add-icon path {
  fill: #333;
}

.add-icon {
  height: 50%;
  aspect-ratio: 1;
}

.add-title {
  font-size: 1.5rem;
}

/* seperator */

.code-container {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  gap: 2rem;
  position: absolute;
  top: calc(300px + 10rem);
  left: 50%;
  transform: translate(-50%);
  width: clamp(30rem, 60vw, 95vw);
  padding: 1rem;
}

.code-container .code-div {
  height: 450px;
  width: 100%;
  background-color: #333;
  padding: 2.5rem;
  position: relative;
}

.code-div .code-title {
  font-size: 1.4rem;
  background: none;
  border: solid 2px transparent;
  border-bottom-color: white;
  outline: none !important;
  padding: .3rem;
  color: white;
  transition: border 100ms ease;
  position: absolute;
  left: 2rem;
  top: 2.5rem;
  max-width: 13rem;
}

.code-title:focus {
  border: solid 2px white;
}

.btn-group {
  position: absolute;
  top: 3rem;
  right: 3rem;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 1rem;
}

.btn {
  background-color: var(--a-clr);
  font-size: 1.2rem;
  padding: .35em 1.25em;
  border: solid 1px transparent;
  border-radius: .2rem;
  cursor: pointer;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: .25rem;
  outline: none !important;
  transition: filter 150ms ease;
}

.btn:where(:hover, :focus) {
  outline: none !important;
  filter: brightness(1.2);
}

.select-lang {
  position: absolute;
  left: 2rem;
  top: 5.5rem;
}

.area {
  font-family: var(--ff-code);
  font-size: 1.1rem;
  background-color: #444;
  height: calc(450px - 7rem);
  width: calc(100% - 5rem);
  position: absolute;
  top: 8rem;
  left: calc(2rem - 1em);
  overflow: scroll;
  border: solid 2px transparent;
  padding: .5em 1em !important;
  resize: none;
  color: white;
  outline: none !important;
}

.code-area.hide {
  display: none;
}

.code-area:focus {
  border: solid 2px white;
  outline: none !important;
}

